--- a/src/_metronic/i18n/messages/he.json
+++ b/src/_metronic/i18n/messages/he.json
@@ -7,6 +7,17 @@
     "MENU.FEATURES": "Features",
     "MENU.APPS": "Apps",
     "MENU.DASHBOARD": "Dashboard",
+    "AUTH.GENERAL.FORGOT_PASSWORD":"שחזור סיסמא",
+    "AUTH.GENERAL.ENTER_YOUR_EMAIL_TO_RESET_YOUR_PASSWRD":"הזן את האימייל שלך כדי לאפס את הסיסמה שלך",
+    "AUTH.GENERAL.CHANGE_PASSWORD":"שנה סיסמא",
+    "AUTH.GENERAL.PASSWORD":"סיסמה",
+    "AUTH.GENERAL.NEW_PASSWORD":"סיסמה חדשה",
+    "AUTH.GENERAL.CONFIRM_PASSWORD":"אשר סיסמה",
+    "AUTH.GENERAL.SORTING":"מִיוּן",
+    "AUTH.GENERAL.USERNAME":"תעודת זהות",
+    "AUTH.GENERAL.CANCEL":"לְבַטֵל",
+    "AUTH.GENERAL.CONTACTINFO":"דואל / נייד",
+    "AUTH.GENERAL.SUBMIT":"אפס סיסמא",
     "AUTH.GENERAL.OR": "Or",
     "AUTH.GENERAL.SUBMIT_BUTTON": "כניסה",
     "AUTH.GENERAL.ACCOUNT_DETAILS": "התחברות לבת עמי",
